k8s-famf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: famf-practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: famf-practice
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: famf-practice
    spec:
      containers:
        - name: famf
          image: gcr.io/thockin-joonix-dev/famf:practice
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1
              memory: 4Gi
          ports:
            - containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: famf-frfr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: famf-frfr
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: famf-frfr
    spec:
      containers:
        - name: famf
          image: gcr.io/thockin-joonix-dev/famf:frfr
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1
              memory: 4Gi
          ports:
            - containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: famf-practice
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: "famf"
    cloud.google.com/backend-config: '{"default": "famf"}'
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: famf-practice
---
apiVersion: v1
kind: Service
metadata:
  name: famf-frfr
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: "famf"
    cloud.google.com/backend-config: '{"default": "famf"}'
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: famf-frfr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: famf
  annotations:
    kubernetes.io/ingress.global-static-ip-name: famf
    networking.gke.io/managed-certificates: famf
spec:
  rules:
  - host: famf.k8s.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: famf-practice
            port:
              number: 80
  - host: famf.hockin.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: famf-practice
            port:
              number: 80
  - host: famf-frfr.hockin.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: famf-frfr
            port:
              number: 80
